knative/sample/serving/app_process/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: helloworld-go
  namespace: default
spec:
  template:
    spec:
      containers:
      - image: asialeaf/helloworld-go:v1.0
        env:
        - name: TARGET
          value: "Go Sample v1.0!"
