knative/sample/serving/app_process/service_.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"serving.knative.dev/v1","kind":"Service","metadata":{"annotations":{},"name":"helloworld-go","namespace":"default"},"spec":{"template":{"spec":{"containers":[{"env":[{"name":"TARGET","value":"Go Sample v1.0!"}],"image":"asialeaf/helloworld-go:v1.0"}]}}}}
    serving.knative.dev/creator: kubernetes-admin
    serving.knative.dev/lastModifier: kubernetes-admin
  creationTimestamp: "2022-06-28T03:14:01Z"
  generation: 1
  name: helloworld-go
  namespace: default
  resourceVersion: "2032162"
  uid: 0c7db8bc-f337-4dd1-93fa-e57e793c975f
spec:
  template:
    metadata:
      creationTimestamp: null
    spec:
      containerConcurrency: 0
      containers:
      - env:
        - name: TARGET
          value: Go Sample v1.0!
        image: asialeaf/helloworld-go:v1.0
        name: user-container
        readinessProbe:
          successThreshold: 1
          tcpSocket:
            port: 0
        resources: {}
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
  - latestRevision: true
    percent: 100
status:
  address:
    url: http://helloworld-go.default.svc.cluster.local
  conditions:
  - lastTransitionTime: "2022-06-28T03:14:09Z"
    status: "True"
    type: ConfigurationsReady
  - lastTransitionTime: "2022-06-28T03:14:09Z"
    status: "True"
    type: Ready
  - lastTransitionTime: "2022-06-28T03:14:09Z"
    status: "True"
    type: RoutesReady
  latestCreatedRevisionName: helloworld-go-00001
  latestReadyRevisionName: helloworld-go-00001
  observedGeneration: 1
  traffic:
  - latestRevision: true
    percent: 100
    revisionName: helloworld-go-00001
  url: http://helloworld-go.default.asialeaf.cn
